# SimianViewerPlugin

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
res/: GeneExpression.json  fullDataSimian.csv  simian_viewer_resources.qrc
res/datasets/: Metadata_combined_cluster_euclidean_distances.csv  Modified_combined_cluster_euclidean_distances.csv  Modifying Data.ipynb  Untitled.ipynb  Untitled1.ipynb  vla.csv
res/jslibs/: d3-tip.js  d3-tip.min.js
res/jstools/: d3-legend.js  debug_data.js  tools.bridge.js
res/simian_viewer/: simian_viewer.html  simian_viewer.js  simian_viewer.queue.js  simian_viewer.ui.js
src/: SimianViewerPlugin.cpp  SimianViewerPlugin.cpp.orig  SimianViewerPlugin.h  SimianViewerPlugin.json  SimianViewerPlugin_BACKUP_5815.cpp  SimianViewerPlugin_BASE_5815.cpp  SimianViewerPlugin_LOCAL_5815.cpp  SimianViewerPlugin_REMOTE_5815.cpp  SimianViewerWidget.cpp  SimianViewerWidget.h
src/Common/: SimianOptionsAction.cpp  SimianOptionsAction.cpp.orig  SimianOptionsAction.h
src/Data/: GeneExpression.json  fullDataSimian.csv  globalMetadata.cpp  globalMetadata.h
